--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "firebase": "^10.6.0",
     "framer-motion": "^10.16.4",
     "moment": "^2.29.4",
-    "next": "14.0.2",
+    "next": "^14.0.2",
     "node": "^18.14.0",
     "react": "^18",
     "react-dom": "^18"
